<resources>
    <string name="app_name">PawMate</string>

    <!-- Content Descriptions -->
    <string name="dog_image">Dog Image</string>

    <!-- UI Strings -->
    <string name="title_identify_the_breed">Identify the Breed</string>
    <string name="title_identify_the_dog">Identify the Dog</string>
    <string name="title_search_dog_breeds">Search Dog Breeds</string>
    <string name="countdown_on">Countdown Timer On</string>
    <string name="countdown_off">Countdown Timer Off</string>
    <string name="select_breed">Select the breed</string>
    <string name="select_dog_image">Select the dog image :</string>
    <string name="btn_next">Next</string>
    <string name="msg_correct">CORRECT!</string>
    <string name="msg_wrong">WRONG!</string>
    <string name="correct_answer">Correct Answer :</string>
    <string name="remaining_time">Remaining Time</string>
    <string name="no_images_left">No more images left!</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="exit_warning_title">Exit PawMate</string>
    <string name="exit_warning_message">Are you sure you want to exit from PawMate?</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_stop">Stop</string>
    <string name="search_hint">Input Dog Breed</string>

    <!-- Dog Breeds -->
    <string name="beagle">Beagle</string>
    <string name="chihuahua">Chihuahua</string>
    <string name="siberian_husky">Siberian Husky</string>
    <string name="doberman">Doberman</string>
    <string name="golden_retriever">Golden Retriever</string>
    <string name="boxer">Boxer</string>
    <string name="rottweiler">Rottweiler</string>
    <string name="german_shepherd">German Shepherd</string>
    <string name="shetland_sheepdog">Shetland Sheepdog</string>
    <string name="afghan_hound">Afghan Hound</string>
    <string name="french_bulldog">French Bulldog</string>
    <string name="silky_terrier">Silky Terrier</string>
    <string name="error_input_dog_breed">Please input dog breed</string>
    <string name="error_no_matching_dog_breed">No matching dog breed found</string>

    <string-array name="array_dog_breeds">
        <item>@string/afghan_hound</item>
        <item>@string/beagle</item>
        <item>@string/boxer</item>
        <item>@string/chihuahua</item>
        <item>@string/doberman</item>
        <item>@string/french_bulldog</item>
        <item>@string/german_shepherd</item>
        <item>@string/golden_retriever</item>
        <item>@string/rottweiler</item>
        <item>@string/shetland_sheepdog</item>
        <item>@string/siberian_husky</item>
        <item>@string/silky_terrier</item>
    </string-array>
</resources>
