<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fillViewport="true"
    android:scrollbars="vertical"
    tools:context=".ui.ActIdentifyBreed">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="15dp">

        <ImageView
            android:id="@+id/ivDogImage"
            android:layout_width="300dp"
            android:layout_height="250dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            android:background="@drawable/bg_outline_grey"
            android:contentDescription="@string/dog_image"/>

        <TextView
            android:id="@+id/tvTimer"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/remaining_time"
            android:textColor="@color/red"
            android:textSize="16sp"
            android:visibility="gone" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/select_breed"
            android:textColor="@color/text_default"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_outline_grey"
            android:padding="5dp">

            <Spinner
                android:id="@+id/spnBreed"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:entries="@array/array_dog_breeds" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lytResult"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/tvResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_wrong"
                android:drawablePadding="10dp"
                android:text="@string/msg_wrong"
                android:textColor="@color/red"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/correct_answer"
                android:textColor="@color/blue"
                android:textSize="16sp"
                android:visibility="visible" />
        </LinearLayout>

        <TextView
            android:id="@+id/btnSubmit"
            style="@style/ButtonStyle"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_marginTop="30dp"
            android:text="@string/btn_submit" />
    </LinearLayout>

</ScrollView>