<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fillViewport="true"
    android:scrollbars="vertical"
    tools:context=".ui.ActIdentifyDog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/select_dog_image"
                android:textColor="@color/text_default"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tvBreedName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:text="@string/shetland_sheepdog"
                android:textColor="@color/black"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivDogImage1"
                android:layout_width="180dp"
                android:layout_height="200dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/bg_grey_outline"
                android:contentDescription="@string/dog_image"
                android:padding="10dp"
                android:src="@drawable/img_beagle_1" />

            <ImageView
                android:id="@+id/ivDogImage2"
                android:layout_width="180dp"
                android:layout_height="200dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/bg_grey_outline"
                android:contentDescription="@string/dog_image"
                android:padding="10dp"
                android:src="@drawable/img_german_shepherd_4" />
        </LinearLayout>

        <ImageView
            android:id="@+id/ivDogImage3"
            android:layout_width="180dp"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_grey_outline"
            android:contentDescription="@string/dog_image"
            android:padding="10dp"
            android:src="@drawable/img_chihuahua_3" />

        <TextView
            android:id="@+id/tvTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Remaining Time 00:09"
            android:textColor="@color/red"
            android:textSize="16sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/ic_wrong"
            android:drawablePadding="10dp"
            android:text="@string/msg_wrong"
            android:textColor="@color/red"
            android:textSize="18sp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/btnSubmit"
            style="@style/ButtonStyle"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_marginTop="30dp"
            android:text="@string/btn_submit" />

    </LinearLayout>
</ScrollView>